--- a/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
@@ -21,5 +21,9 @@
             <artifactId>app-common-spring-boot-starter</artifactId>
             <version>2.2.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
