--- a/api/app-framework-all/app-mybatis-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-mybatis-spring-boot-starter/pom.xml
@@ -21,6 +21,14 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
