--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -65,6 +65,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-docker-compose</artifactId>
             <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
