--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -1,6 +1,29 @@
 server:
   port: 8080
 spring:
+  #redis配置,注意因为我引入了docker会导致data-redis自动配置类PropertiesRedisConnectionDetails失效
+  cache:
+    type: redis
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 1
+      #读超时
+      timeout: 3000
+      # 连接超时
+      connect-timeout: 5000
+      #lettuce连接池
+      lettuce:
+        pool:
+          # 最小空闲连接
+          min-idle: 5
+          # 最大空闲连接
+          max-idle: 10
+          # 最大连接数
+          max-active: 100
+          # 连接分配应该阻塞的最大时间
+          max-wait: 2000
   #docker配置
   docker:
     compose:
