--- a/api/app-learning/learning-application/pom.xml
+++ b/api/app-learning/learning-application/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>app-fastjson2-spring-boot-starter</artifactId>
             <version>2.2.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
