--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -62,12 +62,12 @@
             <artifactId>flyway-mysql</artifactId>
         </dependency>
 <!--   使得redis配置生效     -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-docker-compose</artifactId>-->
-<!--            <optional>true</optional>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <optional>true</optional>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
