--- a/api/app-framework-all/app-ddd-framework-core/pom.xml
+++ b/api/app-framework-all/app-ddd-framework-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.2-SNAPSHOT</version>
+        <version>2.2.2</version>
     </parent>
 
     <artifactId>app-ddd-framework-core</artifactId>
