--- a/api/app-framework-all/app-security-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-security-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.2-SNAPSHOT</version>
+        <version>2.2.2</version>
     </parent>
 
     <artifactId>app-security-spring-boot-starter</artifactId>
@@ -13,12 +13,12 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.2</version>
         </dependency>
         <!--  自身依赖end      -->
         <dependency>
