--- a/api/app-framework-all/app-web-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-web-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.2-SNAPSHOT</version>
+        <version>2.2.2</version>
     </parent>
 
     <artifactId>app-web-spring-boot-starter</artifactId>
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
