--- a/api/app-learning/learning-types/pom.xml
+++ b/api/app-learning/learning-types/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-learning</artifactId>
-        <version>2.2.2-SNAPSHOT</version>
+        <version>2.2.2</version>
     </parent>
 
     <artifactId>learning-types</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
 </project>
