--- a/api/app-user/user-application/pom.xml
+++ b/api/app-user/user-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-user</artifactId>
-        <version>2.2.2-SNAPSHOT</version>
+        <version>2.2.2</version>
     </parent>
 
     <artifactId>user-application</artifactId>
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>user-infrastructure</artifactId>
-            <version>2.2.2-SNAPSHOT</version>
+            <version>2.2.2</version>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.hzz</groupId>-->
