--- a/api/app-framework-all/app-cache-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-cache-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.2</version>
+        <version>2.2.3-SNAPSHOT</version>
     </parent>
 
     <groupId>org.hzz.cache</groupId>
