--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -61,6 +61,7 @@ mybatis:
     map-underscore-to-camel-case: true
   mapper-locations:
     - classpath*:mapper/**/*.xml
+  type-handlers-package: org.hzz.*.infrastructure.dao.handler
 
 springdoc:
   use-fqn: true    #  enables fully qualified names
