--- a/api/app-learning/learning-domain/pom.xml
+++ b/api/app-learning/learning-domain/pom.xml
@@ -16,6 +16,7 @@
     </properties>
 
     <dependencies>
+        <!--  引入自身依赖start      -->
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-types</artifactId>
@@ -40,6 +41,11 @@
             <groupId>org.hzz.course</groupId>
             <artifactId>course-domain</artifactId>
             <version>2.2.3-SNAPSHOT</version>
+        </dependency>
+        <!--  引入自身依赖end      -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
         </dependency>
     </dependencies>
 </project>
