--- a/api/app-user/user-domain/pom.xml
+++ b/api/app-user/user-domain/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.user.types</groupId>
+            <artifactId>user-types</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -27,5 +32,4 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 </project>
