--- a/api/app-learning/learning-application/pom.xml
+++ b/api/app-learning/learning-application/pom.xml
@@ -28,12 +28,22 @@
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
+            <artifactId>user-domain</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.fastjson2</groupId>
             <artifactId>app-fastjson2-spring-boot-starter</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-security-spring-boot-starter</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
