--- a/api/app-learning/learning-types/pom.xml
+++ b/api/app-learning/learning-types/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.fastjson2</groupId>
+            <artifactId>app-fastjson2-spring-boot-starter</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
