添加分类相关枚举

--- a/api/app-course/pom.xml
+++ b/api/app-course/pom.xml
@@ -16,6 +16,7 @@
         <module>course-interface</module>
         <module>course-infrastructure</module>
         <module>course-domain</module>
+        <module>course-types</module>
     </modules>
 
     <properties>
