--- a/api/app-course/course-domain/pom.xml
+++ b/api/app-course/course-domain/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.hzz.course</groupId>
+            <artifactId>course-types</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
             <version>2.2.3-SNAPSHOT</version>
