--- a/api/app-course/course-types/pom.xml
+++ b/api/app-course/course-types/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.fastjson2</groupId>
+            <artifactId>app-fastjson2-spring-boot-starter</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
