--- a/api/app-course/course-application/pom.xml
+++ b/api/app-course/course-application/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>course-infrastructure</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-designpattern-spring-boot-starter</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
