缓存初步设计

--- a/api/app-course/pom.xml
+++ b/api/app-course/pom.xml
@@ -17,6 +17,7 @@
         <module>course-infrastructure</module>
         <module>course-domain</module>
         <module>course-types</module>
+        <module>course-cache</module>
     </modules>
 
     <properties>
