--- a/api/app-learning/learning-domain/pom.xml
+++ b/api/app-learning/learning-domain/pom.xml
@@ -23,6 +23,11 @@
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz.course</groupId>
+            <artifactId>course-cache</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.2.3-SNAPSHOT</version>
@@ -35,11 +40,6 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hzz.course</groupId>
-            <artifactId>course-domain</artifactId>
             <version>2.2.3-SNAPSHOT</version>
         </dependency>
         <!--  引入自身依赖end      -->
