--- a/api/app-framework-all/app-mybatis-spring-boot-starter/src/main/resources/TableFieldsTemplate.properties
+++ b/api/app-framework-all/app-mybatis-spring-boot-starter/src/main/resources/TableFieldsTemplate.properties
@@ -1,3 +1,4 @@
 # \u6307\u5B9A\u6A21\u7248\u6587\u4EF6
 templateFile=TableFields.ftl
-targetPackage=org.hzz.types
+# \u7531\u4E8E\u7ECF\u5E38\u53D8\u52A8\u5728generatorConfig.xml\u914D\u7F6E\u5373\u53EF
+#targetPackage=org.hzz.types
