--- a/api/app-course/course-cache/pom.xml
+++ b/api/app-course/course-cache/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz.course</groupId>
         <artifactId>app-course</artifactId>
-        <version>2.2.3-SNAPSHOT</version>
+        <version>2.2.3</version>
     </parent>
 
     <artifactId>course-cache</artifactId>
@@ -21,7 +19,7 @@
         <dependency>
             <groupId>org.hzz.course</groupId>
             <artifactId>course-domain</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
