--- a/api/app-learning/learning-application/pom.xml
+++ b/api/app-learning/learning-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-learning</artifactId>
-        <version>2.2.3-SNAPSHOT</version>
+        <version>2.2.3</version>
     </parent>
 
     <artifactId>learning-application</artifactId>
@@ -19,32 +19,32 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-infrastructure</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-trigger</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>user-domain</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.fastjson2</groupId>
             <artifactId>app-fastjson2-spring-boot-starter</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-security-spring-boot-starter</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
     </dependencies>
 
