--- a/api/app-mbg/pom.xml
+++ b/api/app-mbg/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>2.2.3-SNAPSHOT</version>
+        <version>2.2.3</version>
     </parent>
 
     <artifactId>app-mbg</artifactId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-mybatis-spring-boot-starter</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -56,7 +56,7 @@
                     <dependency>
                         <groupId>org.hzz</groupId>
                         <artifactId>app-mybatis-spring-boot-starter</artifactId>
-                        <version>2.2.3-SNAPSHOT</version>
+                        <version>2.2.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
