--- a/api/app-learning/learning-domain/pom.xml
+++ b/api/app-learning/learning-domain/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-learning</artifactId>
-        <version>2.2.3</version>
+        <version>2.2.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>learning-domain</artifactId>
@@ -20,27 +20,27 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-types</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.course</groupId>
             <artifactId>course-cache</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.common</groupId>
             <artifactId>app-common-spring-boot-starter</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4-SNAPSHOT</version>
         </dependency>
         <!--  引入自身依赖end      -->
         <dependency>
