--- a/api/app-order/order-types/pom.xml
+++ b/api/app-order/order-types/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-order</artifactId>
-        <version>2.2.3</version>
+        <version>2.2.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>order-types</artifactId>
