--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -39,7 +39,11 @@
             <artifactId>course-interface</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
-        <!--   自身依赖End     -->
+        <dependency>
+            <groupId>org.hzz.remark.interface</groupId>
+            <artifactId>remark-interface</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency><!--   自身依赖End     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
