mybatis dynamic sql引入

--- a/api/app-remark/remark-infrastructure/pom.xml
+++ b/api/app-remark/remark-infrastructure/pom.xml
@@ -24,5 +24,9 @@
             <artifactId>remark-domain</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.dynamic-sql</groupId>
+            <artifactId>mybatis-dynamic-sql</artifactId>
+        </dependency>
     </dependencies>
 </project>
