--- a/api/app-points/points-domain/pom.xml
+++ b/api/app-points/points-domain/pom.xml
@@ -19,6 +19,7 @@
     </properties>
 
     <dependencies>
+        <!--   自身依赖 start    -->
         <dependency>
             <groupId>org.hzz.points.types</groupId>
             <artifactId>points-types</artifactId>
@@ -33,6 +34,16 @@
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
             <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz.cache</groupId>
+            <artifactId>app-cache-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+        <!--   自身依赖 end    -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
         </dependency>
     </dependencies>
 
