--- a/api/app-points/points-trigger/pom.xml
+++ b/api/app-points/points-trigger/pom.xml
@@ -4,23 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <groupId>org.hzz.points</groupId>
+        <artifactId>app-points</artifactId>
         <version>2.2.4-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.hzz.points</groupId>
-    <artifactId>app-points</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>points-interface</module>
-        <module>points-application</module>
-        <module>points-domain</module>
-        <module>points-infrastructure</module>
-        <module>points-types</module>
-        <module>points-trigger</module>
-    </modules>
-    <description>积分系统</description>
+    <groupId>org.hzz.points.trigger</groupId>
+    <artifactId>points-trigger</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -28,4 +18,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
