完成caffeine缓存赛季数据

--- a/api/app-framework-all/app-cache-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-cache-spring-boot-starter/pom.xml
@@ -28,6 +28,10 @@
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2-extension-spring6</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
