--- a/api/app-points/points-application/pom.xml
+++ b/api/app-points/points-application/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>points-trigger</artifactId>
             <version>2.2.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.cache</groupId>
+            <artifactId>points-cache</artifactId>
+            <version>2.2.4-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
