--- a/api/app-course/course-cache/pom.xml
+++ b/api/app-course/course-cache/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.course</groupId>
         <artifactId>app-course</artifactId>
-        <version>2.2.4</version>
+        <version>2.2.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>course-cache</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.hzz.course</groupId>
             <artifactId>course-domain</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
