--- a/api/app-course/course-interface/pom.xml
+++ b/api/app-course/course-interface/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.course</groupId>
         <artifactId>app-course</artifactId>
-        <version>2.2.4</version>
+        <version>2.2.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>course-interface</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.hzz.course</groupId>
             <artifactId>course-application</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
