--- a/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.4</version>
+        <version>2.2.5-SNAPSHOT</version>
     </parent>
 
     <groupId>org.hzz.aop</groupId>
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-security-spring-boot-starter</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
