--- a/api/app-points/points-application/pom.xml
+++ b/api/app-points/points-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.points</groupId>
         <artifactId>app-points</artifactId>
-        <version>2.2.4</version>
+        <version>2.2.5-SNAPSHOT</version>
     </parent>
 
     <groupId>org.hzz.points.application</groupId>
@@ -20,17 +20,17 @@
         <dependency>
             <groupId>org.hzz.points.infrastructure</groupId>
             <artifactId>points-infrastructure</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.points.trigger</groupId>
             <artifactId>points-trigger</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.cache</groupId>
             <artifactId>points-cache</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
