--- a/api/app-remark/remark-application/pom.xml
+++ b/api/app-remark/remark-application/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.remark</groupId>
         <artifactId>app-remark</artifactId>
-        <version>2.2.4</version>
+        <version>2.2.5-SNAPSHOT</version>
     </parent>
 
     <groupId>org.hzz.remark.application</groupId>
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>org.hzz.remark.infrastructure</groupId>
             <artifactId>remark-infrastructure</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-designpattern-spring-boot-starter</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.5-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
