--- a/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.5-SNAPSHOT</version>
+        <version>2.2.5</version>
     </parent>
 
     <artifactId>app-convention-spring-boot-starter</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.hzz.common</groupId>
             <artifactId>app-common-spring-boot-starter</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
