--- a/api/app-framework-all/app-rabbitmq-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-rabbitmq-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-framework-all</artifactId>
-        <version>2.2.5-SNAPSHOT</version>
+        <version>2.2.5</version>
     </parent>
 
     <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
