--- a/api/app-points/points-domain/pom.xml
+++ b/api/app-points/points-domain/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.points</groupId>
         <artifactId>app-points</artifactId>
-        <version>2.2.5-SNAPSHOT</version>
+        <version>2.2.5</version>
     </parent>
 
     <groupId>org.hzz.points.domain</groupId>
@@ -21,27 +21,27 @@
         <dependency>
             <groupId>org.hzz.points.types</groupId>
             <artifactId>points-types</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.cache</groupId>
             <artifactId>app-cache-spring-boot-starter</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <!--   自身依赖 end    -->
         <dependency>
