--- a/api/app-remark/remark-infrastructure/pom.xml
+++ b/api/app-remark/remark-infrastructure/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz.remark</groupId>
         <artifactId>app-remark</artifactId>
-        <version>2.2.5-SNAPSHOT</version>
+        <version>2.2.5</version>
     </parent>
 
     <groupId>org.hzz.remark.infrastructure</groupId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.hzz.remark.domain</groupId>
             <artifactId>remark-domain</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.dynamic-sql</groupId>
