--- a/api/app-user/user-domain/pom.xml
+++ b/api/app-user/user-domain/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-user</artifactId>
-        <version>2.2.5-SNAPSHOT</version>
+        <version>2.2.5</version>
     </parent>
 
     <artifactId>user-domain</artifactId>
@@ -13,17 +13,17 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-ddd-framework-core</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.hzz.user.types</groupId>
             <artifactId>user-types</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
     </dependencies>
 
