--- a/api/app-user/user-infrastructure/pom.xml
+++ b/api/app-user/user-infrastructure/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-user</artifactId>
-        <version>2.2.5-SNAPSHOT</version>
+        <version>2.2.5</version>
     </parent>
 
     <artifactId>user-infrastructure</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>user-domain</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.2.5</version>
         </dependency>
     </dependencies>
 
